--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -15,7 +15,7 @@
 
   margin-bottom: 50px; /* adjust the distance with bnt*/
 }
-.login-bnt{
+.login-btn{
   border-style: solid;
   border-color: #EEE9DA;
   border-radius: 30px;
@@ -28,7 +28,7 @@
   justify-content: center;
   align-items: center;
 }
-.login-bnt img{
+.login-btn img{
   width: 25px;
   height: 25px;
   margin-right: 10px;
