--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,5 +1,5 @@
-.login-page{
-  background-color: #1C3144;
+.login-page {
+  background-color: #1c3144;
   width: 100vw;
   height: 100vh;
 
@@ -8,27 +8,33 @@
   justify-content: center;
   align-items: center;
 }
-.login-title{
+.login-title {
   font-family: Lobster;
   font-size: 5rem;
-  color: #EEE9DA;
+  color: #eee9da;
+
+  user-select: none;
+  -webkit-user-select: none;
 
   margin-bottom: 50px; /* adjust the distance with bnt*/
 }
-.login-btn{
+.login-btn {
   border-style: solid;
-  border-color: #EEE9DA;
+  border-color: #eee9da;
   border-radius: 30px;
 
   width: 210px;
   height: 45px;
-  color: #EEE9DA;
+  color: #eee9da;
+
+  user-select: none;
+  -webkit-user-select: none;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.login-btn img{
+.login-btn img {
   width: 25px;
   height: 25px;
   margin-right: 10px;
