--- a/src/components/PanelView/PanelView.css
+++ b/src/components/PanelView/PanelView.css
@@ -1,21 +1,21 @@
-.panel{
+.panel {
   width: 470px;
   height: 100vh;
 
-  background-color: #1C3144;
+  background-color: #1c3144;
   border-style: solid;
 }
-.panel-logo{
-  font-family: Lobster;
+.panel-logo {
+  font-family: Lobster, sans-serif;
   font-size: 50px;
-  color: #EEE9DA;
+  color: #eee9da;
 
   user-select: none;
   -webkit-user-select: none;
 
   margin-top: 30px;
 }
-.panel-title{
+.panel-title {
   color: white;
   font-size: 30px;
   font-weight: bold;
