--- a/src/components/PanelView/GoalView.css
+++ b/src/components/PanelView/GoalView.css
@@ -1,12 +1,35 @@
-.close-box{
+.panel-goal{
+  display: flex;
+  align-items: center;
+}
+
+.close-narrow{
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 17px;
+  height:17px;
+  position: relative;
+  left: 30px;
+  margin-right: 15px;
   transition: transform 0.5s;
   -webkit-transition: -webkit-transform 0.5s;
   -o-transition: -o-transform 0.5s;
 }
 
-.close-box img{
-  width: 100%;
+.close-narrow img{
+  height: 100%;
+  width: auto;
+}
+
+.panel-goal-title{
+  font-size: 18px;
+  position: relative;
+  left: 30px;
+}
+
+.panel-goal-date{
+  font-size: 14px;
+  color: #BDCDD6;
+
+  position: fixed;
+  left: 250px;
 }
