--- a/src/components/PanelView/PanelView.css
+++ b/src/components/PanelView/PanelView.css
@@ -1,5 +1,5 @@
 .panel {
-  width: 470px;
+  width: 380px;
   height: 100vh;
 
   background-color: #1c3144;
@@ -24,4 +24,7 @@
   -webkit-user-select: none;
 
   margin-top: 30px;
+}
+.panel-goal{
+  color: white
 }
