--- a/src/components/PanelView/GoalView.css
+++ b/src/components/PanelView/GoalView.css
@@ -1,6 +1,7 @@
 .panel-goal {
   display: flex;
   align-items: center;
+  width: 100%;
   margin-bottom: 10px;
 }
 
@@ -9,7 +10,6 @@
   width: 17px;
   height: 17px;
   position: relative;
-  left: 30px;
   margin-right: 15px;
 }
 
@@ -24,20 +24,18 @@
 }
 
 .panel-goal-title {
+  display: flex;
   font-size: 18px;
-  position: relative;
-  left: 30px;
+  margin-left: 0px;
 }
 
 .panel-goal-date {
   font-size: 14px;
   color: #bdcdd6;
-
-  position: fixed;
-  left: 250px;
+  margin-left: auto;
 }
 
 .panel-goal-child {
   position: relative;
-  left: 30px;
+  left: 0px;
 }
