--- a/src/components/PanelView/PanelView.css
+++ b/src/components/PanelView/PanelView.css
@@ -1,6 +1,8 @@
 .panel {
   width: 380px;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 
   background-color: #1c3144;
 }
@@ -23,7 +25,57 @@
   -webkit-user-select: none;
 
   margin-top: 30px;
+  margin-bottom: 10px;
 }
-.panel-goal{
-  color: white
+.panel-goal {
+  color: white;
+}
+.panel-goals{
+  flex: 1 1;
+  min-height: 0;
+  overflow-y: auto;
+  margin: 0 15px;
+}
+.user-interface {
+  display: flex;
+  align-items: center;
+  bottom: 0px;
+  width: 380px;
+  height: 60px;
+  background-color: #1c3144;
+  border-top: 1px solid rgba(233, 208, 208, 0.5);
+}
+.panel-button {
+  background-color: transparent;
+  width: 50px;
+  height: 50px;
+  border-radius: 10%;
+  border-color: transparent;
+  transition: 0.2s;
+}
+.panel-button:hover {
+  border: 1px solid rgba(233, 208, 208, 0.5);
+}
+.user-photo {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-left: 30px;
+  background-color: #eee9da;
+}
+.user-name{
+  color: #eee9da;
+  font-size: 20px;
+  margin-left: 10px;
+  margin-right: 105px;
+}
+.review-icon {
+  color: #eee9da;
+  width: 100%;
+  height: 100%;
+}
+.logout-icon {
+  color: #eee9da;
+  width: 90%;
+  height: 90%;
 }
