--- a/src/components/WeekView/ScheduleView.css
+++ b/src/components/WeekView/ScheduleView.css
@@ -5,21 +5,36 @@
 }
 #schedule-header {
   font-size: 0.5rem;
+  margin: 0;
 }
 #schedule-header-goal {
   font-size: 0.5rem;
   font-weight: bold;
-  color: #585757;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #schedule-header-subgoal {
   font-size: 0.5rem;
+  color: #585757;
   opacity: 0.8;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #schedule-body {
-  padding: 10px 0;
+  padding: 10px 10px;
 }
 #schedule-title {
-  font-size: 1rem;
+  font-size: 1.3rem;
   color: #1C3144;
   font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+#schedule-text{
+  font-size: 0.9rem;
+  color: #ffffff;
+  white-space: nowrap;
 }
