--- a/src/components/PanelView/PanelView.css
+++ b/src/components/PanelView/PanelView.css
@@ -64,11 +64,21 @@
   margin-left: 30px;
   background-color: #eee9da;
 }
+.user-photo img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
 .user-name {
   color: #eee9da;
   font-size: 20px;
   margin-left: 10px;
   margin-right: auto;
+}
+.planner-icon {
+  color: #eee9da;
+  width: 100%;
+  height: 100%;
 }
 .review-icon {
   color: #eee9da;
