--- a/src/components/PanelView/SubGoalView.css
+++ b/src/components/PanelView/SubGoalView.css
@@ -1,10 +1,12 @@
 .panel-subgoal {
   display: flex;
+  align-items: center;
   margin-bottom: 10px; 
 }
 
 .panel-subgoal-narrow{
-  display: inline-block;
+  display: flex;
+  align-items: center;
   width: 17px;
   height:17px;
   margin-right: 15px;
