--- a/src/components/WeekView/WeekView.css
+++ b/src/components/WeekView/WeekView.css
@@ -5,6 +5,6 @@
   flex: 1 1;
 }
 
-.planner-week-last-border{
-  border-left: 1px solid #A4A4A4;
+.planner-week-last-border {
+  border-left: 1px solid #a4a4a4;
 }
