--- a/src/components/PanelView/TaskView.css
+++ b/src/components/PanelView/TaskView.css
@@ -1,6 +1,6 @@
-.panel-task{
-  background-color: #93BFCF;
-  color: #1C3144;
+.panel-task {
+  background-color: #93bfcf;
+  color: #1c3144;
   border-radius: 5px;
   width: 250px;
   height: 25px;
