--- a/src/components/WeekView/DayView.css
+++ b/src/components/WeekView/DayView.css
@@ -1,12 +1,12 @@
-.planner-day-view{
+.planner-day-view {
   display: flex;
   flex-flow: column;
   width: 100%;
   min-width: 100px;
 
-  border-left: 1px solid #A4A4A4;
+  border-left: 1px solid #a4a4a4;
 }
-.day-of-week{
+.day-of-week {
   color: #585757;
   font-size: 1.5rem;
 }
