--- a/src/pages/AppPages/PlannerPage/PlannerPage.css
+++ b/src/pages/AppPages/PlannerPage/PlannerPage.css
@@ -11,9 +11,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 20px 0 ;
+  margin: 20px 0;
 }
-.planner-current-date{
+.planner-current-date {
   font-size: 1.8rem;
   margin: 0 1rem;
 }
@@ -24,7 +24,7 @@
 .planner-left-icon {
   width: 100%;
   height: 100%;
-  color: #A4A4A4;
+  color: #a4a4a4;
 }
 .planner-right-btn {
   width: 25px;
@@ -33,5 +33,5 @@
 .planner-right-icon {
   width: 100%;
   height: 100%;
-  color: #A4A4A4;
+  color: #a4a4a4;
 }
