--- a/src/components/PanelView/PanelView.css
+++ b/src/components/PanelView/PanelView.css
@@ -16,16 +16,33 @@
 
   margin-top: 30px;
 }
+.panel-title-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
 .panel-title {
   color: white;
   font-size: 30px;
   font-weight: bold;
+  flex: 1;
+  text-align: center;
 
   user-select: none;
   -webkit-user-select: none;
-
-  margin-top: 30px;
-  margin-bottom: 10px;
+}
+.panel-title-add {
+  color: white;
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+}
+.panel-title-add:hover {
+  transform: scale(1.1);
+  transition: 0.1s ease;
+  cursor: pointer;
 }
 .panel-goal {
   color: white;
