connect db in planner page

--- a/src/components/WeekView/DayView.css
+++ b/src/components/WeekView/DayView.css
@@ -6,6 +6,10 @@
 
   border-left: 1px solid #a4a4a4;
 }
+.day-view-date{
+  color: #585757;
+  font-size: 1.5rem;
+}
 .day-of-week {
   color: #585757;
   font-size: 1.5rem;
