--- a/src/pages/AppPages/ReviewPage/ReviewPage.css
+++ b/src/pages/AppPages/ReviewPage/ReviewPage.css
@@ -2,7 +2,7 @@
   background-color: #eee9da;
   display: flex;
   justify-content: space-between;
-  gap: 10%;
+  gap: 50px;
   width: 100%;
   padding: 80px 50px;
 }
